5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1593_1802.log
== TEST (2019-03-26 10:55:42) 
-- CODE:
from math import *
pvi=input("Insira os pontos de vidas iniciais: ")
val1=input("Insira os valores sorteados")
val2=input("Insira os valores sorteados")

dano=(int(f)((5*val1)**0.5)+pi***(val2/3))

print(dano)
-- ERROR:
File "XXXX", line 6
    dano=(int(f)((5*val1)**0.5)+pi***(val2/3))
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:56:04) 
-- CODE:
from math import *
pvi=input("Insira os pontos de vidas iniciais: ")
val1=input("Insira os valores sorteados")
val2=input("Insira os valores sorteados")

dano=int(((5*val1)**0.5)+pi***(val2/3))

print(dano)
-- ERROR:
File "XXXX", line 6
    dano=int(((5*val1)**0.5)+pi***(val2/3))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:56:15) 
-- CODE:
from math import *
pvi=input("Insira os pontos de vidas iniciais: ")
val1=input("Insira os valores sorteados")
val2=input("Insira os valores sorteados")

dano=int((5*val1)**0.5)+pi***(val2/3))

print(dano)
-- ERROR:
File "XXXX", line 6
    dano=int((5*val1)**0.5)+pi***(val2/3))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:01) 
-- CODE:
from math import *
pvi=input("Insira os pontos de vidas iniciais: ")
val1=input("Insira os valores sorteados")
val2=input("Insira os valores sorteados")

dano=int(((5*val1)**0.5)+pi***(val2/3))

print(dano)
-- ERROR:
File "XXXX", line 6
    dano=int(((5*val1)**0.5)+pi***(val2/3))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:12) 
-- CODE:
from math import *
pvi=input("Insira os pontos de vidas iniciais: ")
val1=input("Insira os valores sorteados")
val2=input("Insira os valores sorteados")

dano=int(((5*val1)**0.5)+pi**(val2/3))

print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano=int(((5*val1)**0.5)+pi**(val2/3))
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:11) 
-- CODE:
from math import *
pvi=input("Insira os pontos de vidas iniciais: ")
val1=input("Insira os valores sorteados")
val2=input("Insira os valores sorteados")

dano=int(((5*val1)**0.5)+(pi**val23)**3)

print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano=int(((5*val1)**0.5)+(pi**val23)**3)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:54) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados"))
val2=int(input("Insira os valores sorteados"))

dano=int(((5*val1)**0.5)+(pi**val23)**3)

print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    dano=int(((5*val1)**0.5)+(pi**val23)**3)
NameError: name 'val23' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:59:15) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados"))
val2=int(input("Insira os valores sorteados"))

dano=int(((5*val1)**0.5)+(pi**val2)**3)

print(dano)
-- OUTPUT:
888582405
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:59:54) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int(((5*val1)**0.5)+(pi**(val2 / 3))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:19) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int(((5*val1)**0.5)+(pi**val2)**3)

print(dano)
-- OUTPUT:
888582405
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:51) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((((5*val1)**0.5)+(pi**(val2/3)))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:00:54) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((((5*val1)**0.5)+(pi**(val2/3)))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:00) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((((5*val1)**0.5)+(pi**(val2/3)))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:26) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((((5*val1)**0.5)+(pi**(val2/3)))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:39) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int(5*val1)**0.5+(pi**(val2/3)

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:47) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((5*val1)**0.5+(pi**(val2/3))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:42) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((5*val1)**0.5+(pi**(val2/3))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:02:58) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
val1=int(input("Insira os valores sorteados: "))
val2=int(input("Insira os valores sorteados: "))

dano=int((5*val1)**0.5+(pi**(val2/3))

print(int(dano))
-- ERROR:
File "XXXX", line 8
    print(int(dano))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:02) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=int(((5*D1)**0.5)+(pi**(D2/3))

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:48) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=+(5*D1)**0.5)+(pi**(D2/3)

print(dano)
-- ERROR:
File "XXXX", line 6
    dano=+(5*D1)**0.5)+(pi**(D2/3)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:57) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=+((5*D1)**0.5)+(pi**(D2/3)

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:02) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=((5*D1)**0.5)+(pi**(D2/3)

print(dano)
-- ERROR:
File "XXXX", line 8
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:05:47) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=((5*D1)**0.5)+(pi**(D2/3))

print(dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:06:14) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=((5*D1)**0.5)+(pi**(D2/3))

print(int(dano))
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:12) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=((5*D1)**0.5)+(pi**(D2/3))

print(dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:07:54) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=int(((5*D1)**0.5)+(pi**(D2/3)))

print(dano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:08:54) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=int(((5*D1)**0.5)+(pi**(D2/3)))
vmd=pvi-dano

print(vmd)
-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:09:02) 
-- CODE:
from math import *
pvi=int(input("Insira os pontos de vidas iniciais: "))
D1=int(input("Insira os valores sorteados: "))
D2=int(input("Insira os valores sorteados: "))

dano=int(((5*D1)**0.5)+(pi**(D2/3)))
vmd=pvi-dano

print(vmd)
-- EXECUTION TIME:
0.176404
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
